Added SSL to HBase UIs

--- a/cluster/ansible/roles/hbase/templates/etc/hbase/conf/hbase-site.xml.j2
+++ b/cluster/ansible/roles/hbase/templates/etc/hbase/conf/hbase-site.xml.j2
@@ -111,5 +111,10 @@
     <name>hadoop.security.authorization</name>
     <value>false</value>
   </property>
+  <property>
+    <!-- enables SSL for the web based UIs -->
+    <name>hbase.ssl.enabled</name>
+    <value>true</value>
+  </property>
   {% endif %}
 </configuration>
