Fix user and template markup
For some reason a blank line is needed or the template engine is concatenating the lines.

--- a/cluster/ansible/roles/hadoop/templates/etc/systemd/system/nodemanager.service.j2
+++ b/cluster/ansible/roles/hadoop/templates/etc/systemd/system/nodemanager.service.j2
@@ -4,7 +4,8 @@ Before=
 After=network.target
 
 [Service]
-User=root
+User={% if SECURITY_ENABLED %}hdfs{% else %}hadoop{% endif %}
+
 ExecStart={{ HADOOP_HOME }}/bin/yarn nodemanager
 ExecStop=/bin/kill $MAINPID
 Restart=on-abort
