--- a/cluster/ansible/roles/hbase-common/templates/etc/hbase/conf/hbase-site.xml.j2
+++ b/cluster/ansible/roles/hbase-common/templates/etc/hbase/conf/hbase-site.xml.j2
@@ -107,13 +107,13 @@
     <value>org.apache.zookeeper.server.auth.SASLAuthenticationProvider</value>
   </property>
   <property>
-    <!-- enables service-level-authentication on RPC layer -->
+    <!-- Enables service-level-authentication on RPC layer -->
     <!-- MUST be set for impersonation to work! -->
     <name>hadoop.security.authorization</name>
     <value>true</value>
   </property>
   <property>
-    <!-- enables SSL for the web based UIs -->
+    <!-- Enables SSL for the web based UIs (including gateway servers) -->
     <name>hbase.ssl.enabled</name>
     <value>true</value>
   </property>
@@ -171,5 +171,59 @@
     <name>hbase.rest.support.proxyuser</name>
     <value>true</value>
   </property>
+
+  <!-- Thrift gateway related settings -->
+  <!-- HTTP mode and TLS -->
+  <property>
+    <name>hbase.regionserver.thrift.http</name>
+    <value>true</value>
+  </property>
+  <property>
+    <name>hbase.thrift.ssl.enabled</name>
+    <value>true</value>
+  </property>
+  <property>
+    <name>hbase.thrift.ssl.keystore.store</name>
+    <value>{{ KEYSTORE_DIR }}/{{ inventory_hostname}}.jks</value>
+  </property>
+  <property>
+    <name>hbase.thrift.ssl.keystore.password</name>
+    <value>{{ SSL_STORE_PASSWORD }}</value>
+  </property>
+  <property>
+    <name>hbase.thrift.ssl.keystore.keypassword</name>
+    <value>{{ SSL_STORE_PASSWORD }}</value>
+  </property>
+  <!-- Kerberos to HBase Servers-->
+  <property>
+    <name>hadoop.security.authentication</name>
+    <value>kerberos</value>
+  </property>
+  <property>
+    <name>hbase.security.authentication</name>
+    <value>kerberos</value>
+  </property>
+  <property>
+    <name>hbase.thrift.keytab.file</name>
+    <value>{{ KEYTAB_DIR }}/hbase-thrift.keytab</value>
+  </property>
+  <property>
+    <name>hbase.thrift.kerberos.principal</name>
+    <value>hbase-thrift/_HOST@{{ KRB_REALM }}</value>
+  </property>
+  <!-- SPNEGO for Client Access -->
+  <property>
+    <name>hbase.thrift.authentication.type</name>
+    <value>kerberos</value>
+  </property>
+  <property>
+    <name>hbase.thrift.authentication.kerberos.principal</name>
+    <value>HTTP/_HOST@{{ KRB_REALM }}</value>
+  </property>
+  <property>
+    <name>hbase.thrift.authentication.kerberos.keytab</name>
+    <value>{{ KEYTAB_DIR }}/hbase-rest.keytab</value>
+  </property>
+
   {% endif %}
 </configuration>
