Added secure bulk load staging setting

--- a/cluster/ansible/roles/hbase-common/templates/etc/hbase/conf/hbase-site.xml.j2
+++ b/cluster/ansible/roles/hbase-common/templates/etc/hbase/conf/hbase-site.xml.j2
@@ -150,6 +150,11 @@
     <name>hbase.security.visibility.mutations.checkauth</name>
     <value>false</value>
   </property>
+  <!-- Set secure bulk load path -->
+  <property>
+    <name>hbase.bulkload.staging.dir</name>
+    <value>/tmp/hbase-staging</value>
+  </property>
 
   <!-- HBase per CF encryption-->
   <property>
