Site file cleanup

--- a/cluster/ansible/roles/hbase-common/templates/etc/hbase/conf/hbase-site.xml.j2
+++ b/cluster/ansible/roles/hbase-common/templates/etc/hbase/conf/hbase-site.xml.j2
@@ -48,7 +48,7 @@
     <value>true</value>
   </property>
   <property>
-    <name>hbase.bucketcache.combinedcache.enabled</name>
+    <name>OFF-hbase.bucketcache.combinedcache.enabled</name>
     <value>true</value>
   </property>
   <property>
@@ -56,12 +56,12 @@
     <value>offheap</value>
   </property>
   <property>
-    <name>hfile.block.cache.size</name>
-    <value>0.2</value>
-  </property>
-  <property>
     <name>hbase.bucketcache.size</name>
     <value>1024</value>
+  </property>
+  <property>
+    <name>hfile.block.cache.size</name>
+    <value>0.2</value>
   </property>
   <!-- Phoenix related settings-->
   <property>
